# serialport

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/hzrd/serialport_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/hzrd/serialport_test/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/hzrd/serialport_test/: ExampleUnitTest.java
gradle/: libs.versions.toml
serialport/: .gitignore  build.gradle.kts
serialport/src/androidTest/java/io/hzrd/serialport/: ExampleInstrumentedTest.java
serialport/src/main/java/io/hzrd/serialport/: InternalPointerMarker.java  JNIReachabilityFence.java  SerialPort.java
serialport/src/test/java/io/hzrd/serialport/: ExampleUnitTest.java
src/: java_glue.rs.in  lib.rs
