[package]
name = "serialport"
version = "0.1.0"
authors = ["Adam Stohl <iohzrd@gmail.com>"]
build = "build.rs"
edition = "2021"

[lib]
name = "serialport"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
jni-sys = "0.3"
serialport = "4"

[build-dependencies]
flapigen = "*"
env_logger = "0.11"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 34
